Revision on chapter lezar.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1465,6 +1465,21 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{BuffaHoustonPerugia2007,
+  author = {Annalisa Buffa and Paul Houston and Ilaria Perugia},
+  title = {{Discontinuous Galerkin computation of the Maxwell eigenvalues on simplicial meshes}},
+  journal = {Journal of Computational and Applied Mathematics},
+  volume = {204},
+  number = {2},
+  pages = {317 - 333},
+  year = {2007},
+  note = {Special Issue: The Seventh International Conference on Mathematical and Numerical Aspects of Waves (WAVES'05)},
+  issn = {0377-0427},
+  doi = {DOI: 10.1016/j.cam.2006.01.042},
+  url = {http://www.sciencedirect.com/science/article/B6TYH-4KBX4JJ-9/2/54db26daa680351aa89e77be49850e19},
+}
+
+
 @ARTICLE{BurmanFernandez2007,
   author = {Burman, E. and Fern{\'a}ndez, M.A.},
   title = {Stabilized explicit coupling for fluid--structure interaction using
@@ -1920,6 +1935,18 @@
   url = {http://www.comsol.com}
 }
 
+@ARTICLE{ConstableDauge2002,
+  title={{Weighted Regularization of Maxwell Equations in Polyhedral Domains}},
+  author={Costabel, M. and Dauge, M.},
+  journal={Numerische Mathematik},
+  volume={93},
+  number={2},
+  pages={239--277},
+  issn={0029-599X},
+  year={2002},
+  publisher={Springer}
+}
+
 @BOOK{CormenLeisersonRivestEtAl2001,
   title = {Introduction to Algorithms},
   publisher = {The MIT Press},
@@ -2059,13 +2086,14 @@
   number = {1}
 }
 
-@BOOK{Davidson2005,
+@BOOK{Davidson2011,
   title = {Computational Electromagnetics for RF and Microwave Engineers},
   publisher = {Cambridge University Press},
-  year = {2005},
+  address = {Cambridge},
+  isbn = {9780521518918},
+  year = {2011},
   author = {David B. Davidson},
-  owner = {elezar},
-  timestamp = {2007.10.12}
+  edition = {Second}
 }
 
 @ARTICLE{DAVIESREMUZZIGORDONEtAl1986,
@@ -2146,6 +2174,19 @@
   number = {8},
   url = {http://dx.doi.org/10.1016/j.physleta.2007.09.027}
 }
+
+@ARTICLE{DillonWebb1994,
+  author = {B. M. Dillon and Webb, J. P.},
+  title = {A comparison of formulations for the vector finite element analysis
+	of waveguides},
+  journal = {IEEE Trans. Microwave Theory Tech.},
+  year = {1994},
+  volume = {42},
+  pages = {308--316},
+  number = {2},
+  month = {February}
+}
+
 
 @ARTICLE{DinizGerbeauBourgat2008,
   author = {Diniz dos Santos, N. and Gerbeau, J. F. and Bourgat, J. F.},
@@ -3865,6 +3906,14 @@
   year = {2008}
 }
 
+@BOOK{ItohPelosiSilvester1996,
+  title={{Finite Element Software for Microwave Engineering}},
+  author={Itoh, T. and Silvester, P.P. and Pelosi, G.},
+  isbn={0471126365},
+  year={1996},
+  publisher={John Wiley \& Sons, Inc. New York, NY, USA}
+}
+
 @ARTICLE{JafriRiceWinslow1998,
   author = {M. S. Jafri and J. J. Rice and R. L. Winslow},
   title = {Cardiac {C}a$^{2+}$ dynamics: the roles of ryanodine receptor adaptation
@@ -4033,6 +4082,8 @@
 @BOOK{Jin2002,
   title = {The Finite Element Method in Electromagnetics},
   publisher = {John Wiley \& Sons, Inc.},
+  address = {New York},
+  isbn = {0471438189},
   year = {2002},
   author = {Jianming Jin},
   edition = {2nd},
@@ -4466,6 +4517,17 @@
   chapter = {18},
   pages = {293--302},
   url = {http://portal.acm.org/citation.cfm?id=1407867}
+}
+
+@ARTICLE{Lee1994,
+  author = {Lee, J.-F.},
+  title = {Finite Element Analysis of Lossy Dielectric Waveguides},
+  journal = {IEEE Transactions on Microwave Theory Techniques},
+  year = {1994},
+  volume = {42},
+  pages = {1025--1031},
+  number = {5},
+  month = {June}
 }
 
 @ARTICLE{LopezNigroStorti2008,
@@ -5923,6 +5985,15 @@
   url = {http://dx.doi.org/10.1146/annurev.fluid.30.1.539}
 }
 
+@BOOK{Monk2003,
+  title={{Finite Element Methods for Maxwell's Equations}},
+  author={Monk, P.},
+  isbn={0198508883},
+  year={2003},
+  publisher={Oxford University Press},
+  address = {Oxford}
+}
+
 @ARTICLE{Moore1995,
   author = {Moore, P. K.},
   title = {Comparison of adaptive methods for one-dimensional parabolic systems},
@@ -6405,6 +6476,7 @@
 @BOOK{PelosiCoccioliSelleri1998,
   title = {Quick Finite Elements for Electromagnetic Waves},
   publisher = {Artech House},
+  address = {Norwood},
   year = {1998},
   author = {Giuseppe Pelosi and Roberto Coccioli and Stefano Selleri},
   isbn = {0890068488},
@@ -6491,6 +6563,18 @@
   number = {3},
   owner = {kent-and},
   timestamp = {2009.06.08}
+}
+
+@ARTICLE{PolycarpouLyonsBalanis1996,
+  author = {Polycarpou, A. C. and Lyons, M. and Balanis, C. A.},
+  title = {Finite element analysis of {MMIC} waveguide structures with anisotropic
+	substrates},
+  journal = {IEEE Trans. Microwave Theory Tech.},
+  year = {1996},
+  volume = {44},
+  pages = {1650--1663},
+  number = {10},
+  month = {October}
 }
 
 @BOOK{Pope2000,
@@ -6687,6 +6771,15 @@
   month = {Sep},
   doi = {10.1529/biophysj.106.099879},
   url = {http://dx.doi.org/10.1529/biophysj.106.099879}
+}
+
+@BOOK{RamoWhinneryVanDuzer1994,
+  title={Fields and Waves in Communication Electronics},
+  author={Ramo, S. and Whinnery, J.R. and Van Duzer, T.},
+  year={1994},
+  publisher={John Wiley \& Sons}
+  address = {New York},
+  edition={Third}
 }
 
 @ARTICLE{RannacherTurek1992,
@@ -7231,6 +7324,17 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{Silvester1969,
+  author = {Silvester, P. P.},
+  title = {Finite-element solution of homogeneous waveguide problems},
+  journal = {Alta Frequenza},
+  year = {1969},
+  volume = {38},
+  pages = {313-317},
+  owner = {elezar},
+  timestamp = {2010.11.28}
+}
+
 @ARTICLE{SilvesterWathen1994,
   author = {D. Silvester and A. Wathen},
   title = {Fast iterative solution of stabilized {S}tokes systems. {P}art {II}:
@@ -7326,7 +7430,7 @@
   publisher = {Cambridge University Press},
   year = {1997},
   author = {Glenn S Smith},
-  location = {Melbourne},
+  location = {Cambridge},
   owner = {elezar},
   timestamp = {2007.10.12}
 }
@@ -7960,6 +8064,17 @@
   url = {http://scipy.org/Weave}
 }
 
+@ARTICLE{Webb1993,
+  author = {Webb, J. P.},
+  title = {Edge elements and what they can do for you},
+  journal = {IEEE Trans. Magn.},
+  year = {1993},
+  volume = {29},
+  pages = {1460--1465},
+  number = {2},
+  month = {March}
+}
+
 @ARTICLE{WeiKirby1995,
   author = {Ge Wei and James T. Kirby},
   title = {Time-Dependent Numerical Code for Extended {B}oussinesq Equations},
@@ -8223,6 +8338,14 @@
   owner = {logg},
   timestamp = {2009.06.07},
   url = {http://www.sciencedirect.com/science/article/B6V4F-4D8VFVK-1/2/f20de8fc8ea73d8c737a74816ea82726}
+}
+
+@BOOK{ ZhuCangellaris2006,
+ title = {Multigrid finite elements methods for electromagnetic field modelling},
+ publisher = {IEEE Press},
+ year = {2006},
+ author = {Yu Zhu and Andreas C. Cangellaris},
+ address = {New York}
 }
 
 @BOOK{ZienkiewiczTaylorZhu2005firstpublishedin1967,
