.bib  file fix.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8436,7 +8436,7 @@
 
 @UNPUBLISHED{www:petsc,
   title = {software package},
-  author = {PETSc}, 
+  author = {PETSc},
   key = {{PETSc} software package},
   owner = {logg},
   timestamp = {2009.06.06},
@@ -8468,19 +8468,19 @@
 
 @UNPUBLISHED{www:python-capi,
   title = {{Python C API Reference Manual}},
-  key = {Python C-API}
+  key = {Python C-API},
   url = {http://docs.python.org/c-api}
 }
 
-@UNPUBLISHED{www:distutils, 
-  title = { distutils — {B}uilding and installing {P}ython modules},
-  key   = {Distutils}, 
+@UNPUBLISHED{www:distutils,
+  title = {distutils — {B}uilding and installing {P}ython modules},
+  key   = {Distutils},
   url   = {http://docs.python.org/library/distutils.html}
 }
 
 @UNPUBLISHED{www:python-extending,
   title = {Extending and Embedding the Python Interpreter},
-  key = {Extending Python}
+  key = {Extending Python},
   url = {http://docs.python.org/extending}
 }
 
