--- a/book.tex
+++ b/book.tex
@@ -44,7 +44,7 @@
 
 %\fenicsinput{kirby-7}
 %\fenicsinput{kirby-6}
-\fenicsinput{kirby-1}
+%\fenicsinput{kirby-1}
 %\fenicsinput{kirby-5}
 \fenicsinput{logg-3}
 %%%\fenicsinput{oelgaard-2}
