Fix .bib file again.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6775,11 +6775,11 @@
 
 @BOOK{RamoWhinneryVanDuzer1994,
   title={Fields and Waves in Communication Electronics},
-  author={Ramo, S. and Whinnery, J.R. and Van Duzer, T.},
+  author={Ramo, S. and Whinnery, J. R. and Van Duzer, T.},
   year={1994},
-  publisher={John Wiley \& Sons}
+  publisher = {John Wiley \& Sons},
   address = {New York},
-  edition={Third}
+  edition = {Third}
 }
 
 @ARTICLE{RannacherTurek1992,
