--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1372,14 +1372,7 @@
   pages = {3099--3104},
   number = {8},
   month = {Feb},
-  comment = {Broc_2005_3099_S1.pdf},
-  doi = {10.1073/pnas.0500059102},
-  file = {Broc_2005_3099.pdf:Broc_2005_3099.pdf:PDF},
   key = {256},
-  owner = {logg},
-  pii = {0500059102},
-  pmid = {15710901},
-  timestamp = {2006.01.03},
   url = {http://dx.doi.org/10.1073/pnas.0500059102}
 }
 
@@ -1467,16 +1460,13 @@
 
 @ARTICLE{BuffaHoustonPerugia2007,
   author = {Annalisa Buffa and Paul Houston and Ilaria Perugia},
-  title = {{Discontinuous Galerkin computation of the Maxwell eigenvalues on simplicial meshes}},
+  title = {Discontinuous {G}alerkin computation of the {M}axwell eigenvalues on simplicial meshes},
   journal = {Journal of Computational and Applied Mathematics},
   volume = {204},
   number = {2},
   pages = {317 - 333},
   year = {2007},
-  note = {Special Issue: The Seventh International Conference on Mathematical and Numerical Aspects of Waves (WAVES'05)},
-  issn = {0377-0427},
-  doi = {DOI: 10.1016/j.cam.2006.01.042},
-  url = {http://www.sciencedirect.com/science/article/B6TYH-4KBX4JJ-9/2/54db26daa680351aa89e77be49850e19},
+  url = {http://dx.doi.org/DOI: 10.1016/j.cam.2006.01.042},
 }
 
 
@@ -2770,10 +2760,9 @@
   pages = {091004},
   number = {9},
   eid = {091004},
-  doi = {10.1115/1.3148470},
   numpages = {9},
   publisher = {ASME},
-  url = {http://link.aip.org/link/?JBY/131/091004/1}
+  url = {http://dx.doi.org/10.1115/1.3148470}
 }
 
 @ARTICLE{FlahertyLoyShephardEtAl1997,
@@ -4112,7 +4101,7 @@
   volume = {196},
   pages = {2197 - 2215},
   number = {17-20},
-  doi = {http://dx.doi.org/10.1016/j.cma.2006.11.013},
+  url = {http://dx.doi.org/10.1016/j.cma.2006.11.013},
 }
 
 @ARTICLE{Johnson1988,
@@ -6496,14 +6485,12 @@
 
 @ARTICLE{Peregrine1967,
   author = {D. H. Peregrine},
-  title = {Long waves on a beach.},
+  title = {Long waves on a beach},
   journal = {Journal of Fluid Mechanics Digital Archive},
   year = {1967},
   pages = {815-827},
   number = {27},
-  doi = {10.1017/S0022112067002605},
-  owner = {logg},
-  timestamp = {2009.06.07}
+  url = {http://dx.doi.org/10.1017/S0022112067002605},
 }
 
 @ARTICLE{PerugiaSimoncini2000,
@@ -6527,11 +6514,8 @@
   pages = {59--69},
   number = {1},
   month = {Jul},
-  doi = {10.1007/BF00232055},
-  file = {Pesk_1992_59.pdf:Pesk_1992_59.pdf:PDF},
+  url = {http://dx.doi.org/10.1007/BF00232055},
   key = {236},
-  timestamp = {2006.01.18},
-  url = {http://dx.doi.org/10.1007/BF00232055}
 }
 
 @ARTICLE{PetersReicheltReusken2005,
@@ -6769,7 +6753,6 @@
   pages = {1847--1857},
   number = {6},
   month = {Sep},
-  doi = {10.1529/biophysj.106.099879},
   url = {http://dx.doi.org/10.1529/biophysj.106.099879}
 }
 
@@ -6789,20 +6772,18 @@
   year = {1992},
   volume = {8},
   pages = {97--111},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
 }
 
 @ARTICLE{Ransau2002,
   author = {Samuel R. Ransau},
   title = {Solution Methods for Incompressible Viscous Free Surface Flows: A
 	Literature Review.},
-  journal = { Preprint Numerics NO.3/2002},
+  journal = {Preprint Numerics NO.3/2002},
   year = {2002},
   volume = {210},
   number = {1},
   address = {Trondheim, Norway},
-  doi = {http://www.math.ntnu.no/preprint/numerics/2002/N3-2002.ps},
+  url = {http://www.math.ntnu.no/preprint/numerics/2002/N3-2002.ps},
   publisher = {Norwegian University of Science and Technology}
 }
 
@@ -6815,11 +6796,6 @@
   year = {1977},
   pages = {292--315. Lecture Notes in Math., Vol. 606},
   address = {Berlin},
-  mrclass = {65N30},
-  mrnumber = {MR0483555 (58 \#3547)},
-  mrreviewer = {Jan Bochenek},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{RaviartThomas1977a,
@@ -6830,11 +6806,6 @@
   volume = {31},
   pages = {391--413},
   number = {138},
-  mrclass = {65N30},
-  mrnumber = {55 \#4747},
-  mrreviewer = {William W. Hager},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Rayleigh1870,
@@ -6888,20 +6859,15 @@
   volume = {21},
   pages = {604-613},
   number = {3},
-  doi = {10.1137/0721042},
-  owner = {logg},
   publisher = {SIAM},
-  timestamp = {2009.06.07},
-  url = {http://link.aip.org/link/?SNA/21/604/1}
+  url = {http://dx.doi.org/10.1137/0721042}
 }
 
-@BOOK{Rivenaes1993,
+@phdthesis{Rivenaes1993,
   title = {A Computer Simulation Model for Siliciclastic Basin Stratigraphy},
-  publisher = {PhD thesis, NTH--Trondheim},
+  school = {NTH--Trondheim},
   year = {1993},
   author = {J. C. Riven{\ae}s},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{Rivenaes1992,
@@ -6912,8 +6878,6 @@
   year = {1992},
   volume = {4},
   pages = {133--146},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{RogalloMoin1984,
@@ -7115,10 +7079,8 @@
   volume = {34},
   pages = {1--33},
   number = {2},
-  address = {New York, NY, USA},
-  doi = {http://doi.acm.org/10.1145/1326548.1326549},
+  url = {http://doi.acm.org/10.1145/1326548.1326549},
   issn = {0098-3500},
-  publisher = {ACM}
 }
 
 @BOOK{SamuelssonWiberg1998,
@@ -7180,9 +7142,7 @@
   volume = {336},
   pages = {28-40},
   number = {1},
-  doi = {10.1056/NEJM199701023360106},
-  eprint = {http://content.nejm.org/cgi/reprint/336/1/28.pdf},
-  url = {http://content.nejm.org}
+  url = {http://dx.doi.org/10.1056/NEJM199701023360106}
 }
 
 @ARTICLE{SchloegelKarypisKumar1997,
@@ -7486,9 +7446,7 @@
   volume = {32},
   pages = {798-807},
   number = {12},
-  doi = {10.1001/archneur.1975.00490540042005},
-  eprint = {http://archneur.ama-assn.org/cgi/reprint/32/12/798.pdf},
-  url = {http://archneur.ama-assn.org/cgi/content/abstract/32/12/798}
+  url = {http://dx.doi.org/10.1001/archneur.1975.00490540042005},
 }
 
 @ARTICLE{Stenberg1995,
@@ -7691,11 +7649,6 @@
   pages = {3379--3396},
   number = {10},
   month = {May},
-  doi = {10.1529/biophysj.106.089425},
-  file = {Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF;Tans_2007_3379.pdf:Tans_2007_3379.pdf:PDF},
-  pii = {biophysj.106.089425},
-  pmid = {17325016},
-  timestamp = {2007.06.18},
   url = {http://dx.doi.org/10.1529/biophysj.106.089425}
 }
 
@@ -8106,9 +8059,7 @@
   volume = {96},
   pages = {3-42},
   number = {1},
-  doi = {10.3171/jns.2002.96.1.0003},
-  eprint = {http://thejns.org/doi/pdf/10.3171/jns.2002.96.1.0003},
-  url = {http://thejns.org/doi/abs/10.3171/jns.2002.96.1.0003}
+  url = {http://dx.doi.org/10.3171/jns.2002.96.1.0003},
 }
 
 @ARTICLE{WellsSluys2001,
