Add revised nikbakht to 'unfinished'.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,24 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@ARTICLE{JagerSteinmannKuhl2008,
+  author = {J\"ager, P. and Steinmann, P. and Kuhl, E.},
+  title = {Modeling three-dimensional crack propagation - A comparison of crack path tracking strategies},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {2008},
+  volume = {76},
+  pages = {1328--1352},
+  number = {9},
+}
+
+@ARTICLE{BabuskaBanerjeeOsborn2003,
+  author={Babu\v{s}ka,I. and Banerjee,U. and Osborn,J. E.},
+  title={Survey of meshless and generalized finite element methods: {A} unified approach},
+  journal={Acta Numerica},
+  year={2003},
+  volume={12},
+  pages={1--125}
+}
 @article{Axelsson1986,
   title={A general incomplete block-matrix factorization method},
   author={Axelsson, O.},
