--- a/book.tex
+++ b/book.tex
@@ -61,7 +61,7 @@
 \fenicsinput{kirby-3}
 %%%\fenicsinput{kirby-2}
 %%%\fenicsinput{wilbers}
-%%%\fenicsinput{alnes-3}
+\fenicsinput{alnes-3}
 %\fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
 %%%\fenicsinput{hoffman-2}
